# ChangeLog for xfce-extra/xfce4-mixer
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Nov 2008; Christoph Mende <angelos@gentoo.org> xfce4-mixer-9999.ebuild:
  Added xfconf dependency

  25 Feb 2008; Christoph Mende <angelos@gentoo.org> xfce4-mixer-9999.ebuild:
  Enabled parallel building, added gstreamer dependencies, removed
  make_desktop_entry

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
