@@ -1,3 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST xfce4-mixer-4.5.92.tar.bz2 413736 RMD160 19f898f5dd6c0ba8bf2d84e2d36bbdcb2064b65c SHA1 e87d8f43e641930faba3804504f8f50964721d6f SHA256 dd6fd62fe9f1a8fbf2b54d02dfe12bf0b7aa48024cd06cda9e078516307675f1
+EBUILD xfce4-mixer-4.5.92.ebuild 799 RMD160 a38102fceb3694b2f1e5b59f115bd02092a8a89a SHA1 5d2c8284adf582f96f90cb087ddde4f7d609ea20 SHA256 fa3097faf4357eba76618d806cdda01ae19c9747d75a1b734b21466802b3e912
 EBUILD xfce4-mixer-9999.ebuild 799 RMD160 a38102fceb3694b2f1e5b59f115bd02092a8a89a SHA1 5d2c8284adf582f96f90cb087ddde4f7d609ea20 SHA256 fa3097faf4357eba76618d806cdda01ae19c9747d75a1b734b21466802b3e912
-MISC ChangeLog 477 RMD160 50d263e2f382508e34fcc11e730b497fc4ba2965 SHA1 49b1c4070baf7e84d89cd78612c8d81e780ea35a SHA256 b366a84d16f26a48b65604607cc44c9171adf665fbb183a6b591e36144304b8a
+MISC ChangeLog 618 RMD160 5b8d09b83ab9d6bc53d3ca6a1db924eabb53c95f SHA1 b102fe6387ac2bc8162e6b81642558c9721e11ba SHA256 c693441a6ea4f899b58d316a98c90a18a978580920b9facd19d221525d238e34
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkkdtfYACgkQKhnDs22gwa8gpQCfX0aygXsY2sfMTOX2Fk/rFJ6S
+iToAoNmzl9bEJsXuBCo+WvRJa0XdCj3Q
+=924V
+-----END PGP SIGNATURE-----
