@@ -1,0 +1,29 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=1
+
+inherit xfce4
+
+xfce4_core
+
+DESCRIPTION="Volume control application using gstreamer"
+HOMEPAGE="http://www.xfce.org/projects/xfce4-mixer"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+
+IUSE="alsa debug oss"
+
+RDEPEND=">=dev-libs/glib-2.12:2
+	>=media-libs/gst-plugins-base-0.10.2
+	>=x11-libs/gtk+-2.10:2
+	>=xfce-base/libxfce4util-${XFCE_VERSION}
+	>=xfce-base/libxfcegui4-${XFCE_VERSION}
+	>=xfce-base/xfce4-panel-${XFCE_VERSION}
+	>=xfce-base/xfconf-${XFCE_VERSION}
+	alsa? ( media-plugins/gst-plugins-alsa )
+	oss? ( media-plugins/gst-plugins-oss )"
+DEPEND="${RDEPEND}
+	dev-util/intltool"
+
+DOCS="AUTHORS ChangeLog HACKING NEWS README THANKS TODO"
